@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,12 +27,12 @@ package jdk.javadoc.internal.doclets.formats.html.markup;
 
 import java.io.IOException;
 import java.io.Writer;
-import java.text.SimpleDateFormat;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.Date;
 import java.util.List;
+import java.util.Locale;
 
 import jdk.javadoc.internal.doclets.toolkit.Content;
 import jdk.javadoc.internal.doclets.toolkit.util.DocPath;
@@ -42,15 +42,10 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocPaths;
  * An HTML {@code <head>} element.
  *
  * Many methods return the current object, to facilitate fluent builder-style usage.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
  */
 public class Head extends Content {
     private final Runtime.Version docletVersion;
-    private final Date generatedDate;
+    private final ZonedDateTime generatedDate;
     private final DocPath pathToRoot;
     private String title;
     private String charset;
@@ -59,10 +54,12 @@ public class Head extends Content {
     private String generator;
     private boolean showTimestamp;
     private DocPath mainStylesheet;
-    private List<DocPath> additionalStylesheets = Collections.emptyList();
+    private List<DocPath> additionalStylesheets = List.of();
     private boolean index;
     private Script mainBodyScript;
     private final List<Script> scripts;
+    // Scripts added via --add-script option
+    private List<DocPath> additionalScripts = List.of();
     private final List<Content> extraContent;
     private boolean addDefaultScript = true;
     private DocPath canonicalLink;
@@ -70,13 +67,13 @@ public class Head extends Content {
     /**
      * Creates a {@code Head} object, for a given file and HTML version.
      * The file is used to help determine the relative paths to stylesheet and script files.
-     * The HTML version is used to determine the the appropriate form of a META element
+     * The HTML version is used to determine the appropriate form of a META element
      * recording the time the file was created.
      * The doclet version should also be provided for recording in the file.
      * @param path the path for the file that will include this HEAD element
      * @param docletVersion the doclet version
      */
-    public Head(DocPath path, Runtime.Version docletVersion, Date generatedDate) {
+    public Head(DocPath path, Runtime.Version docletVersion, ZonedDateTime generatedDate) {
         this.docletVersion = docletVersion;
         this.generatedDate = generatedDate;
         pathToRoot = path.parent().invert();
@@ -169,6 +166,19 @@ public class Head extends Content {
     }
 
     /**
+     * Sets the list of additional script files to be added to the HEAD element.
+     * The path for the script files must be relative to the root of the generated
+     * documentation hierarchy.
+     *
+     * @param scripts the list of additional script files
+     * @return this object
+     */
+    public Head setAdditionalScripts(List<DocPath> scripts) {
+        this.additionalScripts = scripts;
+        return this;
+    }
+
+    /**
      * Sets whether or not to include the supporting scripts and stylesheets for the
      * "search" feature.
      * If the feature is enabled, a {@code Script} must be provided into which some
@@ -243,8 +253,8 @@ public class Head extends Content {
     }
 
     @Override
-    public boolean write(Writer out, boolean atNewline) throws IOException {
-        return toContent().write(out, atNewline);
+    public boolean write(Writer out, String newline, boolean atNewline) throws IOException {
+        return toContent().write(out, newline, atNewline);
     }
 
     /**
@@ -253,81 +263,82 @@ public class Head extends Content {
      * @return the HTML
      */
     private Content toContent() {
-        HtmlTree tree = new HtmlTree(TagName.HEAD);
-        tree.add(getGeneratedBy(showTimestamp, generatedDate));
-        tree.add(HtmlTree.TITLE(title));
+        var head = new HtmlTree(TagName.HEAD);
+        head.add(getGeneratedBy(showTimestamp, generatedDate));
+        head.add(HtmlTree.TITLE(title));
 
-        tree.add(HtmlTree.META("viewport", "width=device-width, initial-scale=1"));
+        head.add(HtmlTree.META("viewport", "width=device-width, initial-scale=1"));
 
         if (charset != null) { // compatibility; should this be allowed?
-            tree.add(HtmlTree.META("Content-Type", "text/html", charset));
+            head.add(HtmlTree.META("Content-Type", "text/html", charset));
         }
 
         if (showTimestamp) {
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
-            tree.add(HtmlTree.META("dc.created", dateFormat.format(generatedDate)));
+            DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+            head.add(HtmlTree.META("dc.created", generatedDate.format(dateFormat)));
         }
 
         if (description != null) {
-            tree.add(HtmlTree.META("description", description));
+            head.add(HtmlTree.META("description", description));
         }
 
         if (generator != null) {
-            tree.add(HtmlTree.META("generator", generator));
+            head.add(HtmlTree.META("generator", generator));
         }
 
         for (String k : keywords) {
-            tree.add(HtmlTree.META("keywords", k));
+            head.add(HtmlTree.META("keywords", k));
         }
 
         if (canonicalLink != null) {
-            HtmlTree link = new HtmlTree(TagName.LINK);
+            var link = new HtmlTree(TagName.LINK);
             link.put(HtmlAttr.REL, "canonical");
             link.put(HtmlAttr.HREF, canonicalLink.getPath());
-            tree.add(link);
+            head.add(link);
         }
 
-        addStylesheets(tree);
-        addScripts(tree);
-        extraContent.forEach(tree::add);
+        addStylesheets(head);
+        addScripts(head);
+        extraContent.forEach(head::add);
 
-        return tree;
+        return head;
     }
 
-    private Comment getGeneratedBy(boolean timestamp, Date now) {
+
+    private Comment getGeneratedBy(boolean timestamp, ZonedDateTime buildDate) {
         String text = "Generated by javadoc"; // marker string, deliberately not localized
         text += " (" + docletVersion.feature() + ")";
         if (timestamp) {
-            text += " on " + now;
+            DateTimeFormatter fmt =
+                    DateTimeFormatter.ofPattern("EEE MMM dd HH:mm:ss zzz yyyy").withLocale(Locale.US);
+            text += " on " + buildDate.format(fmt);
         }
         return new Comment(text);
     }
 
-    private void addStylesheets(HtmlTree tree) {
+    private void addStylesheets(HtmlTree head) {
         if (mainStylesheet == null) {
             mainStylesheet = DocPaths.STYLESHEET;
         }
-        addStylesheet(tree, mainStylesheet);
+        addStylesheet(head, mainStylesheet);
 
         for (DocPath path : additionalStylesheets) {
-            addStylesheet(tree, path);
+            addStylesheet(head, path);
         }
 
         if (index) {
-            // The order of the addStylesheet(...) calls is important
-            addStylesheet(tree, DocPaths.JQUERY_FILES.resolve(DocPaths.JQUERY_UI_CSS));
-            addStylesheet(tree, DocPaths.JQUERY_OVERRIDES_CSS);
+            addStylesheet(head, DocPaths.SCRIPT_DIR.resolve(DocPaths.JQUERY_UI_CSS));
         }
     }
 
-    private void addStylesheet(HtmlTree tree, DocPath stylesheet) {
-        tree.add(HtmlTree.LINK("stylesheet", "text/css",
+    private void addStylesheet(HtmlTree head, DocPath stylesheet) {
+        head.add(HtmlTree.LINK("stylesheet", "text/css",
                 pathToRoot.resolve(stylesheet).getPath(), "Style"));
     }
 
-    private void addScripts(HtmlTree tree) {
+    private void addScripts(HtmlTree head) {
         if (addDefaultScript) {
-            tree.add(HtmlTree.SCRIPT(pathToRoot.resolve(DocPaths.JAVASCRIPT).getPath()));
+            head.add(HtmlTree.SCRIPT(pathToRoot.resolve(DocPaths.JAVASCRIPT).getPath()));
         }
         if (index) {
             if (pathToRoot != null && mainBodyScript != null) {
@@ -337,16 +348,19 @@ public class Head extends Content {
                         .append(";\n")
                         .append("loadScripts(document, 'script');");
             }
-            addJQueryFile(tree, DocPaths.JQUERY_JS);
-            addJQueryFile(tree, DocPaths.JQUERY_UI_JS);
+            addScriptElement(head, DocPaths.JQUERY_JS);
+            addScriptElement(head, DocPaths.JQUERY_UI_JS);
+        }
+        for (DocPath path : additionalScripts) {
+            addScriptElement(head, path);
         }
         for (Script script : scripts) {
-            tree.add(script.asContent());
+            head.add(script.asContent());
         }
     }
 
-    private void addJQueryFile(HtmlTree tree, DocPath filePath) {
-        DocPath jqueryFile = pathToRoot.resolve(DocPaths.JQUERY_FILES.resolve(filePath));
-        tree.add(HtmlTree.SCRIPT(jqueryFile.getPath()));
+    private void addScriptElement(HtmlTree head, DocPath filePath) {
+        DocPath scriptFile = pathToRoot.resolve(DocPaths.SCRIPT_DIR).resolve(filePath);
+        head.add(HtmlTree.SCRIPT(scriptFile.getPath()));
     }
 }
