@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,6 +23,7 @@
 
 package transform;
 
+import com.sun.org.apache.xerces.internal.util.XMLChar;
 import java.io.IOException;
 
 import javax.xml.transform.TransformerConfigurationException;
@@ -32,19 +33,16 @@ import javax.xml.transform.sax.TransformerHandler;
 import javax.xml.transform.stream.StreamResult;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.xml.sax.SAXException;
 
 /*
  * @test
- * @bug 6883209
- * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.OpenJDK100017Test
+ * @bug 6883209 8273370
+ * @modules java.xml/com.sun.org.apache.xerces.internal.util
  * @run testng/othervm transform.OpenJDK100017Test
  * @summary Test XSLT won't cause StackOverflow when it handle many characters.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class OpenJDK100017Test {
 
     @Test
@@ -56,7 +54,9 @@ public class OpenJDK100017Test {
 
             StringBuilder sb = new StringBuilder(4096);
             for (int x = 4096; x > 0; x--) {
-                sb.append((char) x);
+                if (XMLChar.isValid(x)) {
+                    sb.append((char)x);
+                }
             }
             ser.characters(sb.toString().toCharArray(), 0, sb.toString().toCharArray().length);
             ser.endDocument();
