@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,16 +24,19 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng/othervm TestSegmentAllocators
  */
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 import org.testng.annotations.*;
 
+import java.lang.foreign.SegmentScope;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
+import java.nio.CharBuffer;
 import java.nio.DoubleBuffer;
 import java.nio.FloatBuffer;
 import java.nio.IntBuffer;
@@ -41,36 +44,37 @@ import java.nio.LongBuffer;
 import java.nio.ShortBuffer;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.IntStream;
-import java.util.stream.LongStream;
 
 import static org.testng.Assert.*;
 
 public class TestSegmentAllocators {
 
     final static int ELEMS = 128;
-    final static Class<?> ADDRESS_CARRIER = MemoryLayouts.ADDRESS.bitSize() == 64 ? long.class : int.class;
+    final static Class<?> ADDRESS_CARRIER = ValueLayout.ADDRESS.bitSize() == 64 ? long.class : int.class;
 
-    @Test(dataProvider = "nativeScopes")
-    public <Z> void testAllocation(Z value, AllocationFactory allocationFactory, ValueLayout layout, AllocationFunction<Z> allocationFunction, Function<MemoryLayout, VarHandle> handleFactory) {
-        ValueLayout[] layouts = {
+    @Test(dataProvider = "scalarAllocations")
+    @SuppressWarnings("unchecked")
+    public <Z, L extends ValueLayout> void testAllocation(Z value, AllocationFactory allocationFactory, L layout, AllocationFunction<Z, L> allocationFunction, Function<MemoryLayout, VarHandle> handleFactory) {
+        layout = (L)layout.withBitAlignment(layout.bitSize());
+        L[] layouts = (L[])new ValueLayout[] {
                 layout,
                 layout.withBitAlignment(layout.bitAlignment() * 2),
                 layout.withBitAlignment(layout.bitAlignment() * 4),
                 layout.withBitAlignment(layout.bitAlignment() * 8)
         };
-        for (ValueLayout alignedLayout : layouts) {
+        for (L alignedLayout : layouts) {
             List<MemorySegment> addressList = new ArrayList<>();
             int elems = ELEMS / ((int)alignedLayout.byteAlignment() / (int)layout.byteAlignment());
-            ResourceScope[] scopes = {
-                    ResourceScope.newConfinedScope(),
-                    ResourceScope.newSharedScope()
+            Arena[] arenas = {
+                    Arena.openConfined(),
+                    Arena.openShared()
             };
-            for (ResourceScope scope : scopes) {
-                try (scope) {
-                    SegmentAllocator allocator = allocationFactory.allocator(alignedLayout.byteSize() * ELEMS, scope);
+            for (Arena arena : arenas) {
+                try (arena) {
+                    SegmentAllocator allocator = allocationFactory.allocator(alignedLayout.byteSize() * ELEMS, arena);
                     for (int i = 0; i < elems; i++) {
                         MemorySegment address = allocationFunction.allocate(allocator, alignedLayout, value);
                         assertEquals(address.byteSize(), alignedLayout.byteSize());
@@ -80,9 +84,9 @@ public class TestSegmentAllocators {
                     }
                     boolean isBound = allocationFactory.isBound();
                     try {
-                        allocationFunction.allocate(allocator, alignedLayout, value); //too much, should fail if bound
+                        allocationFunction.allocate(allocator, alignedLayout, value);
                         assertFalse(isBound);
-                    } catch (OutOfMemoryError ex) {
+                    } catch (IndexOutOfBoundsException ex) {
                         //failure is expected if bound
                         assertTrue(isBound);
                     }
@@ -98,45 +102,116 @@ public class TestSegmentAllocators {
     static final int SIZE_256M = 1024 * 1024 * 256;
 
     @Test
-    public void testBigAllocationInUnboundedScope() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            SegmentAllocator allocator = SegmentAllocator.arenaAllocator(scope);
+    public void testBigAllocationInUnboundedSession() {
+        try (Arena arena = Arena.openConfined()) {
             for (int i = 8 ; i < SIZE_256M ; i *= 8) {
+                SegmentAllocator allocator = SegmentAllocator.slicingAllocator(arena.allocate(i * 2 + 1));
                 MemorySegment address = allocator.allocate(i, i);
                 //check size
                 assertEquals(address.byteSize(), i);
                 //check alignment
-                assertEquals(address.address().toRawLongValue() % i, 0);
+                assertEquals(address.address() % i, 0);
             }
         }
     }
 
-    @Test(expectedExceptions = OutOfMemoryError.class)
+    @Test
     public void testTooBigForBoundedArena() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            SegmentAllocator allocator = SegmentAllocator.arenaAllocator(10, scope);
-            allocator.allocate(12);
+        try (Arena arena = Arena.openConfined()) {
+            SegmentAllocator allocator = SegmentAllocator.slicingAllocator(arena.allocate(10));
+            assertThrows(IndexOutOfBoundsException.class, () -> allocator.allocate(12));
+            allocator.allocate(5);
+        }
+    }
+
+    @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
+    public void testBadAllocationSize(SegmentAllocator allocator) {
+        allocator.allocate(-1);
+    }
+
+    @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
+    public void testBadAllocationAlignZero(SegmentAllocator allocator) {
+        allocator.allocate(1, 0);
+    }
+
+    @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
+    public void testBadAllocationAlignNeg(SegmentAllocator allocator) {
+        allocator.allocate(1, -1);
+    }
+
+    @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
+    public void testBadAllocationAlignNotPowerTwo(SegmentAllocator allocator) {
+        allocator.allocate(1, 3);
+    }
+
+    @Test(dataProvider = "allocators", expectedExceptions = IllegalArgumentException.class)
+    public void testBadAllocationArrayNegSize(SegmentAllocator allocator) {
+        allocator.allocateArray(ValueLayout.JAVA_BYTE, -1);
+    }
+
+    @Test(expectedExceptions = OutOfMemoryError.class)
+    public void testBadArenaNullReturn() {
+        try (Arena arena = Arena.openConfined()) {
+            arena.allocate(Long.MAX_VALUE, 2);
         }
     }
 
     @Test
-    public void testBiggerThanBlockForBoundedArena() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            SegmentAllocator allocator = SegmentAllocator.arenaAllocator(4 * 1024 * 2, scope);
-            allocator.allocate(4 * 1024 + 1); // should be ok
-        }
+    public void testArrayAllocateDelegation() {
+        AtomicInteger calls = new AtomicInteger();
+        SegmentAllocator allocator = new SegmentAllocator() {
+            @Override
+            public MemorySegment allocate(long bytesSize, long byteAlignment) {
+                return null;
+            }
+
+            @Override
+            public MemorySegment allocateArray(MemoryLayout elementLayout, long count) {
+                calls.incrementAndGet();
+                return null;
+            };
+        };
+        allocator.allocateArray(ValueLayout.JAVA_BYTE);
+        allocator.allocateArray(ValueLayout.JAVA_SHORT);
+        allocator.allocateArray(ValueLayout.JAVA_CHAR);
+        allocator.allocateArray(ValueLayout.JAVA_INT);
+        allocator.allocateArray(ValueLayout.JAVA_FLOAT);
+        allocator.allocateArray(ValueLayout.JAVA_LONG);
+        allocator.allocateArray(ValueLayout.JAVA_DOUBLE);
+        assertEquals(calls.get(), 7);
     }
 
-    @Test(dataProvider = "arrayScopes")
-    public <Z> void testArray(AllocationFactory allocationFactory, ValueLayout layout, AllocationFunction<Object> allocationFunction, ToArrayHelper<Z> arrayHelper) {
-        Z arr = arrayHelper.array();
-        ResourceScope[] scopes = {
-                ResourceScope.newConfinedScope(),
-                ResourceScope.newSharedScope()
+    @Test
+    public void testStringAllocateDelegation() {
+        AtomicInteger calls = new AtomicInteger();
+        SegmentAllocator allocator = new SegmentAllocator() {
+            @Override
+
+            public MemorySegment allocate(long byteSize, long byteAlignment) {
+                return MemorySegment.allocateNative(byteSize, byteAlignment, SegmentScope.auto());
+            }
+
+            @Override
+            public MemorySegment allocate(long size) {
+                calls.incrementAndGet();
+                return allocate(size, 1);
+            };
         };
-        for (ResourceScope scope : scopes) {
-            try (scope) {
-                SegmentAllocator allocator = allocationFactory.allocator(100, scope);
+        allocator.allocateUtf8String("Hello");
+        assertEquals(calls.get(), 1);
+    }
+
+
+    @Test(dataProvider = "arrayAllocations")
+    public <Z> void testArray(AllocationFactory allocationFactory, ValueLayout layout, AllocationFunction<Object, ValueLayout> allocationFunction, ToArrayHelper<Z> arrayHelper) {
+        Z arr = arrayHelper.array();
+        Arena[] arenas = {
+                Arena.openConfined(),
+                Arena.openShared()
+        };
+        for (Arena arena : arenas) {
+            try (arena) {
+                SegmentAllocator allocator = allocationFactory.allocator(100, arena);
                 MemorySegment address = allocationFunction.allocate(allocator, layout, arr);
                 Z found = arrayHelper.toArray(address, layout);
                 assertEquals(found, arr);
@@ -144,237 +219,153 @@ public class TestSegmentAllocators {
         }
     }
 
-    @DataProvider(name = "nativeScopes")
-    static Object[][] nativeScopes() {
-        return new Object[][] {
-                { (byte)42, AllocationFactory.BOUNDED, MemoryLayouts.BITS_8_BE,
-                        (AllocationFunction<Byte>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(byte.class) },
-                { (short)42, AllocationFactory.BOUNDED, MemoryLayouts.BITS_16_BE,
-                        (AllocationFunction<Short>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(short.class) },
-                { (char)42, AllocationFactory.BOUNDED, MemoryLayouts.BITS_16_BE,
-                        (AllocationFunction<Character>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(char.class) },
-                { 42, AllocationFactory.BOUNDED,
-                        MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<Integer>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(int.class) },
-                { 42f, AllocationFactory.BOUNDED, MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<Float>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(float.class) },
-                { 42L, AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<Long>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(long.class) },
-                { 42d, AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<Double>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(double.class) },
-                { MemoryAddress.ofLong(42), AllocationFactory.BOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
-                        (AllocationFunction<MemoryAddress>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> MemoryHandles.asAddressVarHandle(l.varHandle(ADDRESS_CARRIER)) },
+    @DataProvider(name = "scalarAllocations")
+    static Object[][] scalarAllocations() {
+        List<Object[]> scalarAllocations = new ArrayList<>();
+        for (AllocationFactory factory : AllocationFactory.values()) {
+            scalarAllocations.add(new Object[] { (byte)42, factory, ValueLayout.JAVA_BYTE,
+                    (AllocationFunction.OfByte) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { (short)42, factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfShort) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { (char)42, factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfChar) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42, factory,
+                    ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfInt) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42f, factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfFloat) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42L, factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfLong) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42d, factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfDouble) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { MemorySegment.ofAddress(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfAddress) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
 
-                { (byte)42, AllocationFactory.BOUNDED, MemoryLayouts.BITS_8_LE,
-                        (AllocationFunction<Byte>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(byte.class) },
-                { (short)42, AllocationFactory.BOUNDED, MemoryLayouts.BITS_16_LE,
-                        (AllocationFunction<Short>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(short.class) },
-                { (char)42, AllocationFactory.BOUNDED, MemoryLayouts.BITS_16_LE,
-                        (AllocationFunction<Character>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(char.class) },
-                { 42, AllocationFactory.BOUNDED,
-                        MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<Integer>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(int.class) },
-                { 42f, AllocationFactory.BOUNDED, MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<Float>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(float.class) },
-                { 42L, AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<Long>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(long.class) },
-                { 42d, AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<Double>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(double.class) },
-                { MemoryAddress.ofLong(42), AllocationFactory.BOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.LITTLE_ENDIAN),
-                        (AllocationFunction<MemoryAddress>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> MemoryHandles.asAddressVarHandle(l.varHandle(ADDRESS_CARRIER)) },
+            scalarAllocations.add(new Object[] { (short)42, factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfShort) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { (char)42, factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfChar) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42, factory,
+                    ValueLayout.JAVA_INT.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfInt) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42f, factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfFloat) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42L, factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfLong) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { 42d, factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfDouble) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+            scalarAllocations.add(new Object[] { MemorySegment.ofAddress(42), factory, ValueLayout.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfAddress) SegmentAllocator::allocate,
+                    (Function<MemoryLayout, VarHandle>)l -> l.varHandle() });
+        }
+        return scalarAllocations.toArray(Object[][]::new);
+    }
 
-                { (byte)42, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_8_BE,
-                        (AllocationFunction<Byte>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(byte.class) },
-                { (short)42, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_16_BE,
-                        (AllocationFunction<Short>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(short.class) },
-                { (char)42, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_16_BE,
-                        (AllocationFunction<Character>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(char.class) },
-                { 42, AllocationFactory.UNBOUNDED,
-                        MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<Integer>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(int.class) },
-                { 42f, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<Float>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(float.class) },
-                { 42L, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<Long>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(long.class) },
-                { 42d, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<Double>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(double.class) },
-                { MemoryAddress.ofLong(42), AllocationFactory.UNBOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
-                        (AllocationFunction<MemoryAddress>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> MemoryHandles.asAddressVarHandle(l.varHandle(ADDRESS_CARRIER)) },
+    @DataProvider(name = "arrayAllocations")
+    static Object[][] arrayAllocations() {
+        List<Object[]> arrayAllocations = new ArrayList<>();
+        for (AllocationFactory factory : AllocationFactory.values()) {
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_BYTE,
+                    (AllocationFunction.OfByteArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toByteArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfCharArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toCharArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfShortArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toShortArray });
+            arrayAllocations.add(new Object[] { factory,
+                    ValueLayout.JAVA_INT.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfIntArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toIntArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfFloatArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toFloatArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfLongArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toLongArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.LITTLE_ENDIAN),
+                    (AllocationFunction.OfDoubleArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toDoubleArray });
 
-                { (byte)42, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_8_LE,
-                        (AllocationFunction<Byte>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(byte.class) },
-                { (short)42, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_16_LE,
-                        (AllocationFunction<Short>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(short.class) },
-                { (char)42, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_16_LE,
-                        (AllocationFunction<Character>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(char.class) },
-                { 42, AllocationFactory.UNBOUNDED,
-                        MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<Integer>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(int.class) },
-                { 42f, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<Float>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(float.class) },
-                { 42L, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<Long>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(long.class) },
-                { 42d, AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<Double>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> l.varHandle(double.class) },
-                { MemoryAddress.ofLong(42), AllocationFactory.UNBOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.LITTLE_ENDIAN),
-                        (AllocationFunction<MemoryAddress>) SegmentAllocator::allocate,
-                        (Function<MemoryLayout, VarHandle>)l -> MemoryHandles.asAddressVarHandle(l.varHandle(ADDRESS_CARRIER)) },
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_CHAR.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfCharArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toCharArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfShortArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toShortArray });
+            arrayAllocations.add(new Object[] { factory,
+                    ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfIntArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toIntArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_FLOAT.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfFloatArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toFloatArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_LONG.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfLongArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toLongArray });
+            arrayAllocations.add(new Object[] { factory, ValueLayout.JAVA_DOUBLE.withOrder(ByteOrder.BIG_ENDIAN),
+                    (AllocationFunction.OfDoubleArray) SegmentAllocator::allocateArray,
+                    ToArrayHelper.toDoubleArray });
         };
+        return arrayAllocations.toArray(Object[][]::new);
     }
 
-    @DataProvider(name = "arrayScopes")
-    static Object[][] arrayScopes() {
-        return new Object[][] {
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_8_LE,
-                        (AllocationFunction<byte[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toByteArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_16_LE,
-                        (AllocationFunction<short[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toShortArray },
-                { AllocationFactory.BOUNDED,
-                        MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<int[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toIntArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<float[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toFloatArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<long[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toLongArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<double[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toDoubleArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.LITTLE_ENDIAN),
-                        (AllocationFunction<MemoryAddress[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toAddressArray },
+    interface AllocationFunction<X, L extends ValueLayout> {
+        MemorySegment allocate(SegmentAllocator allocator, L layout, X value);
 
+        interface OfByte extends AllocationFunction<Byte, ValueLayout.OfByte> { }
+        interface OfBoolean extends AllocationFunction<Boolean, ValueLayout.OfBoolean> { }
+        interface OfChar extends AllocationFunction<Character, ValueLayout.OfChar> { }
+        interface OfShort extends AllocationFunction<Short, ValueLayout.OfShort> { }
+        interface OfInt extends AllocationFunction<Integer, ValueLayout.OfInt> { }
+        interface OfFloat extends AllocationFunction<Float, ValueLayout.OfFloat> { }
+        interface OfLong extends AllocationFunction<Long, ValueLayout.OfLong> { }
+        interface OfDouble extends AllocationFunction<Double, ValueLayout.OfDouble> { }
+        interface OfAddress extends AllocationFunction<MemorySegment, ValueLayout.OfAddress> { }
 
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_8_BE,
-                        (AllocationFunction<byte[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toByteArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_16_BE,
-                        (AllocationFunction<short[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toShortArray },
-                { AllocationFactory.BOUNDED,
-                        MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<int[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toIntArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<float[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toFloatArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<long[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toLongArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<double[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toDoubleArray },
-                { AllocationFactory.BOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
-                        (AllocationFunction<MemoryAddress[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toAddressArray },
-
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_8_LE,
-                        (AllocationFunction<byte[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toByteArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_16_LE,
-                        (AllocationFunction<short[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toShortArray },
-                { AllocationFactory.UNBOUNDED,
-                        MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<int[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toIntArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_32_LE,
-                        (AllocationFunction<float[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toFloatArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<long[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toLongArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_LE,
-                        (AllocationFunction<double[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toDoubleArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.LITTLE_ENDIAN),
-                        (AllocationFunction<MemoryAddress[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toAddressArray },
-
-
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_8_BE,
-                        (AllocationFunction<byte[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toByteArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_16_BE,
-                        (AllocationFunction<short[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toShortArray },
-                { AllocationFactory.UNBOUNDED,
-                        MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<int[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toIntArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_32_BE,
-                        (AllocationFunction<float[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toFloatArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<long[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toLongArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.BITS_64_BE,
-                        (AllocationFunction<double[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toDoubleArray },
-                { AllocationFactory.UNBOUNDED, MemoryLayouts.ADDRESS.withOrder(ByteOrder.BIG_ENDIAN),
-                        (AllocationFunction<MemoryAddress[]>) SegmentAllocator::allocateArray,
-                        ToArrayHelper.toAddressArray },
-        };
+        interface OfByteArray extends AllocationFunction<byte[], ValueLayout.OfByte> { }
+        interface OfCharArray extends AllocationFunction<char[], ValueLayout.OfChar> { }
+        interface OfShortArray extends AllocationFunction<short[], ValueLayout.OfShort> { }
+        interface OfIntArray extends AllocationFunction<int[], ValueLayout.OfInt> { }
+        interface OfFloatArray extends AllocationFunction<float[], ValueLayout.OfFloat> { }
+        interface OfLongArray extends AllocationFunction<long[], ValueLayout.OfLong> { }
+        interface OfDoubleArray extends AllocationFunction<double[], ValueLayout.OfDouble> { }
     }
 
-    interface AllocationFunction<X> {
-        MemorySegment allocate(SegmentAllocator allocator, ValueLayout layout, X value);
-    }
+    enum AllocationFactory {
+        SLICING(true, (size, drop) -> SegmentAllocator.slicingAllocator(MemorySegment.allocateNative(size, drop.scope()))),
+        NATIVE_ALLOCATOR(false, (size, drop) -> SegmentAllocator.nativeAllocator(drop.scope()));
 
-    static class AllocationFactory {
         private final boolean isBound;
-        private final BiFunction<Long, ResourceScope, SegmentAllocator> factory;
+        private final BiFunction<Long, Arena, SegmentAllocator> factory;
 
-        private AllocationFactory(boolean isBound, BiFunction<Long, ResourceScope, SegmentAllocator> factory) {
+        AllocationFactory(boolean isBound, BiFunction<Long, Arena, SegmentAllocator> factory) {
             this.isBound = isBound;
             this.factory = factory;
         }
 
-        SegmentAllocator allocator(long size, ResourceScope scope) {
-            return factory.apply(size, scope);
+        SegmentAllocator allocator(long size, Arena arena) {
+            return factory.apply(size, arena);
         }
 
         public boolean isBound() {
             return isBound;
         }
-
-        static AllocationFactory BOUNDED = new AllocationFactory(true, SegmentAllocator::arenaAllocator);
-        static AllocationFactory UNBOUNDED = new AllocationFactory(false, (size, scope) -> SegmentAllocator.arenaAllocator(scope));
     }
 
     interface ToArrayHelper<T> {
@@ -391,6 +382,21 @@ public class TestSegmentAllocators {
             public byte[] toArray(MemorySegment segment, ValueLayout layout) {
                 ByteBuffer buffer = segment.asByteBuffer().order(layout.order());
                 byte[] found = new byte[buffer.limit()];
+                buffer.get(found);
+                return found;
+            }
+        };
+
+        ToArrayHelper<char[]> toCharArray = new ToArrayHelper<>() {
+            @Override
+            public char[] array() {
+                return new char[] { 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
+            }
+
+            @Override
+            public char[] toArray(MemorySegment segment, ValueLayout layout) {
+                CharBuffer buffer = segment.asByteBuffer().order(layout.order()).asCharBuffer();
+                char[] found = new char[buffer.limit()];
                 buffer.get(found);
                 return found;
             }
@@ -470,33 +476,13 @@ public class TestSegmentAllocators {
                 return found;
             }
         };
+    }
 
-        ToArrayHelper<MemoryAddress[]> toAddressArray = new ToArrayHelper<>() {
-            @Override
-            public MemoryAddress[] array() {
-                return switch ((int)MemoryLayouts.ADDRESS.byteSize()) {
-                    case 4 -> wrap(toIntArray.array());
-                    case 8 -> wrap(toLongArray.array());
-                    default -> throw new IllegalStateException("Cannot get here");
-                };
-            }
-
-            @Override
-            public MemoryAddress[] toArray(MemorySegment segment, ValueLayout layout) {
-                return switch ((int)layout.byteSize()) {
-                    case 4 -> wrap(toIntArray.toArray(segment, layout));
-                    case 8 -> wrap(toLongArray.toArray(segment, layout));
-                    default -> throw new IllegalStateException("Cannot get here");
-                };
-            }
-
-            private MemoryAddress[] wrap(int[] ints) {
-                return IntStream.of(ints).mapToObj(MemoryAddress::ofLong).toArray(MemoryAddress[]::new);
-            }
-
-            private MemoryAddress[] wrap(long[] ints) {
-                return LongStream.of(ints).mapToObj(MemoryAddress::ofLong).toArray(MemoryAddress[]::new);
-            }
+    @DataProvider(name = "allocators")
+    static Object[][] allocators() {
+        return new Object[][] {
+                { SegmentAllocator.nativeAllocator(SegmentScope.global()) },
+                { SegmentAllocator.prefixAllocator(MemorySegment.allocateNative(10, SegmentScope.global())) },
         };
     }
 }
