@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,18 +22,20 @@
  */
 
 import java.io.IOException;
-import java.lang.ref.Cleaner;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentScope;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
 import java.util.Random;
 import java.util.concurrent.ExecutionException;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
-import jdk.incubator.foreign.MemoryAccess;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+
 import jdk.test.lib.RandomFactory;
 import org.testng.annotations.*;
+
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static org.testng.Assert.*;
 
 /**
@@ -48,12 +50,6 @@ public class AbstractChannelsTest {
     @FunctionalInterface
     interface ThrowingConsumer<T, X extends Throwable> {
         void accept(T action) throws X;
-    }
-
-    static ResourceScope closeableScopeOrNull(ResourceScope scope) {
-        if (scope.isImplicit())
-            return null;
-        return scope;
     }
 
     static long remaining(ByteBuffer[] buffers) {
@@ -72,29 +68,29 @@ public class AbstractChannelsTest {
 
     static final Random RANDOM = RandomFactory.getRandom();
 
-    static ByteBuffer segmentBufferOfSize(ResourceScope scope, int size) {
-        var segment = MemorySegment.allocateNative(size, 1, scope);
+    static ByteBuffer segmentBufferOfSize(SegmentScope session, int size) {
+        var segment = MemorySegment.allocateNative(size, 1, session);
         for (int i = 0; i < size; i++) {
-            MemoryAccess.setByteAtOffset(segment, i, ((byte)RANDOM.nextInt()));
+            segment.set(JAVA_BYTE, i, ((byte)RANDOM.nextInt()));
         }
         return segment.asByteBuffer();
     }
 
-    static ByteBuffer[] segmentBuffersOfSize(int len, ResourceScope scope, int size) {
+    static ByteBuffer[] segmentBuffersOfSize(int len, SegmentScope session, int size) {
         ByteBuffer[] bufs = new ByteBuffer[len];
         for (int i = 0; i < len; i++)
-            bufs[i] = segmentBufferOfSize(scope, size);
+            bufs[i] = segmentBufferOfSize(session, size);
         return bufs;
     }
 
     /**
      * Returns an array of mixed source byte buffers; both heap and direct,
-     * where heap can be from the global scope or scope-less, and direct are
-     * associated with the given scope.
+     * where heap can be from the global session or session-less, and direct are
+     * associated with the given session.
      */
-    static ByteBuffer[] mixedBuffersOfSize(int len, ResourceScope scope, int size) {
+    static ByteBuffer[] mixedBuffersOfSize(int len, SegmentScope session, int size) {
         ByteBuffer[] bufs;
-        boolean atLeastOneScopeBuffer = false;
+        boolean atLeastOneSessionBuffer = false;
         do {
             bufs = new ByteBuffer[len];
             for (int i = 0; i < len; i++) {
@@ -105,12 +101,12 @@ public class AbstractChannelsTest {
                     case 1 -> { byte[] b = new byte[size];
                                 RANDOM.nextBytes(b);
                                 yield MemorySegment.ofArray(b).asByteBuffer(); }
-                    case 2 -> { atLeastOneScopeBuffer = true;
-                                yield segmentBufferOfSize(scope, size); }
+                    case 2 -> { atLeastOneSessionBuffer = true;
+                                yield segmentBufferOfSize(session, size); }
                     default -> throw new AssertionError("cannot happen");
                 };
             }
-        } while (!atLeastOneScopeBuffer);
+        } while (!atLeastOneSessionBuffer);
         return bufs;
     }
 
@@ -125,84 +121,50 @@ public class AbstractChannelsTest {
         }
     }
 
-    @DataProvider(name = "confinedScopes")
-    public static Object[][] confinedScopes() {
+    @DataProvider(name = "confinedArenas")
+    public static Object[][] confinedArenas() {
         return new Object[][] {
-                { ScopeSupplier.NEW_CONFINED          },
-                { ScopeSupplier.NEW_CONFINED_EXPLICIT },
+                { ArenaSupplier.NEW_CONFINED          },
         };
     }
 
-    @DataProvider(name = "sharedScopes")
-    public static Object[][] sharedScopes() {
+    @DataProvider(name = "sharedArenas")
+    public static Object[][] sharedArenas() {
         return new Object[][] {
-                { ScopeSupplier.NEW_SHARED          },
-                { ScopeSupplier.NEW_SHARED_EXPLICIT },
+                { ArenaSupplier.NEW_SHARED          },
         };
     }
 
-    @DataProvider(name = "closeableScopes")
-    public static Object[][] closeableScopes() {
-        return Stream.of(sharedScopes(), confinedScopes())
+    @DataProvider(name = "closeableArenas")
+    public static Object[][] closeableArenas() {
+        return Stream.of(sharedArenas(), confinedArenas())
                 .flatMap(Arrays::stream)
                 .toArray(Object[][]::new);
     }
 
-    @DataProvider(name = "implicitScopes")
-    public static Object[][] implicitScopes() {
+    @DataProvider(name = "sharedArenasAndTimeouts")
+    public static Object[][] sharedArenasAndTimeouts() {
         return new Object[][] {
-                { ScopeSupplier.NEW_IMPLICIT },
-                { ScopeSupplier.GLOBAL       },
+                { ArenaSupplier.NEW_SHARED          ,  0 },
+                { ArenaSupplier.NEW_SHARED          , 30 },
         };
     }
 
-    @DataProvider(name = "sharedAndImplicitScopes")
-    public static Object[][] sharedAndImplicitScopes() {
-        return Stream.of(sharedScopes(), implicitScopes())
-                .flatMap(Arrays::stream)
-                .toArray(Object[][]::new);
-    }
+    static class ArenaSupplier implements Supplier<Arena> {
 
-    @DataProvider(name = "allScopes")
-    public static Object[][] allScopes() {
-        return Stream.of(implicitScopes(), closeableScopes())
-                .flatMap(Arrays::stream)
-                .toArray(Object[][]::new);
-    }
+        static final Supplier<Arena> NEW_CONFINED =
+                new ArenaSupplier(Arena::openConfined, "confined arena");
+        static final Supplier<Arena> NEW_SHARED =
+                new ArenaSupplier(Arena::openShared, "shared arena");
 
-    @DataProvider(name = "sharedScopesAndTimeouts")
-    public static Object[][] sharedScopesAndTimeouts() {
-        return new Object[][] {
-                { ScopeSupplier.NEW_SHARED          ,  0 },
-                { ScopeSupplier.NEW_SHARED_EXPLICIT ,  0 },
-                { ScopeSupplier.NEW_SHARED          , 30 },
-                { ScopeSupplier.NEW_SHARED_EXPLICIT , 30 },
-        };
-    }
-
-    static class ScopeSupplier implements Supplier<ResourceScope> {
-
-        static final Supplier<ResourceScope> NEW_CONFINED =
-                new ScopeSupplier(() -> ResourceScope.newConfinedScope(), "newConfinedScope()");
-        static final Supplier<ResourceScope> NEW_CONFINED_EXPLICIT =
-                new ScopeSupplier(() -> ResourceScope.newConfinedScope(Cleaner.create()), "newConfinedScope(Cleaner)");
-        static final Supplier<ResourceScope> NEW_SHARED =
-                new ScopeSupplier(() -> ResourceScope.newSharedScope(), "newSharedScope()");
-        static final Supplier<ResourceScope> NEW_SHARED_EXPLICIT =
-                new ScopeSupplier(() -> ResourceScope.newSharedScope(Cleaner.create()), "newSharedScope(Cleaner)");
-        static final Supplier<ResourceScope> NEW_IMPLICIT =
-                new ScopeSupplier(() -> ResourceScope.newImplicitScope(), "newImplicitScope()");
-        static final Supplier<ResourceScope> GLOBAL =
-                new ScopeSupplier(() -> ResourceScope.globalScope(), "globalScope()");
-
-        private final Supplier<ResourceScope> supplier;
+        private final Supplier<Arena> supplier;
         private final String str;
-        private ScopeSupplier(Supplier<ResourceScope> supplier, String str) {
+        private ArenaSupplier(Supplier<Arena> supplier, String str) {
             this.supplier = supplier;
             this.str = str;
         }
         @Override public String toString() { return str; }
-        @Override public ResourceScope get() { return supplier.get(); }
+        @Override public Arena get() { return supplier.get(); }
     }
 }
 
