@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,24 +22,35 @@
  */
 
 /* @test
- * @bug 4313887 6838333 8005566 8032220 8215467 8255576
- * @summary Unit test for miscellenous methods in java.nio.file.Files
- * @library ..
+ * @bug 4313887 6838333 8005566 8215467 8255576 8286160
+ * @summary Unit test for miscellaneous methods in java.nio.file.Files
+ * @library .. /test/lib
+ * @build jdk.test.lib.Platform
+ * @run main Misc
  */
 
-import java.nio.file.*;
+import java.io.IOException;
+import java.io.File;
+import java.nio.file.FileAlreadyExistsException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.attribute.AclEntry;
+import java.nio.file.attribute.AclEntryPermission;
+import java.nio.file.attribute.AclEntryType;
+import java.nio.file.attribute.AclFileAttributeView;
+import java.nio.file.attribute.DosFileAttributeView;
+import java.nio.file.attribute.UserPrincipal;
+import java.util.List;
+import jdk.test.lib.Platform;
+
 import static java.nio.file.Files.*;
 import static java.nio.file.LinkOption.*;
-import java.nio.file.attribute.*;
-import java.io.IOException;
-import java.util.*;
 
 public class Misc {
 
     public static void main(String[] args) throws IOException {
         Path dir = TestUtil.createTemporaryDirectory();
         try {
-            testCreateDirectories(dir);
             testIsHidden(dir);
             testIsSameFile(dir);
             testFileTypeMethods(dir);
@@ -49,39 +60,6 @@ public class Misc {
         }
     }
 
-    /**
-     * Tests createDirectories
-     */
-    static void testCreateDirectories(Path tmpdir) throws IOException {
-        // a no-op
-        createDirectories(tmpdir);
-
-        // create one directory
-        Path subdir = tmpdir.resolve("a");
-        createDirectories(subdir);
-        assertTrue(exists(subdir));
-
-        // create parents
-        subdir = subdir.resolve("b/c/d");
-        createDirectories(subdir);
-        assertTrue(exists(subdir));
-
-        // existing file is not a directory
-        Path file = createFile(tmpdir.resolve("x"));
-        try {
-            createDirectories(file);
-            throw new RuntimeException("failure expected");
-        } catch (FileAlreadyExistsException x) { }
-        try {
-            createDirectories(file.resolve("y"));
-            throw new RuntimeException("failure expected");
-        } catch (IOException x) { }
-
-        // the root directory always exists
-        Path root = Paths.get("/");
-        Files.createDirectories(root);
-        Files.createDirectories(root.toAbsolutePath());
-    }
 
     /**
      * Tests isHidden
@@ -93,7 +71,7 @@ public class Misc {
         assertTrue(!isHidden(tmpdir));
 
         Path file = tmpdir.resolve(".foo");
-        if (System.getProperty("os.name").startsWith("Windows")) {
+        if (Platform.isWindows()) {
             createFile(file);
             try {
                 setAttribute(file, "dos:hidden", true);
@@ -286,6 +264,13 @@ public class Misc {
             assertTrue(exists(tmpdir));
             assertTrue(!notExists(tmpdir));
 
+            if (Platform.isWindows()) {
+                Path pageFile = Path.of("C:\\pagefile.sys");
+                if (pageFile.toFile().exists()) {
+                    System.out.printf("Check page file %s%n", pageFile);
+                    assertTrue(exists(pageFile));
+                }
+            }
 
             // sym link exists
             if (TestUtil.supportsLinks(tmpdir)) {
@@ -351,7 +336,7 @@ public class Misc {
             /**
              * Test: Windows DOS read-only attribute
              */
-            if (System.getProperty("os.name").startsWith("Windows")) {
+            if (Platform.isWindows()) {
                 setAttribute(file, "dos:readonly", true);
                 try {
                     assertTrue(!isWritable(file));
@@ -381,10 +366,10 @@ public class Misc {
     }
 
     private static boolean isRoot() {
-        if (System.getProperty("os.name").startsWith("Windows"))
+        if (Platform.isWindows())
             return false;
 
-        Path passwd = Paths.get("/etc/passwd");
+        Path passwd = Path.of("/etc/passwd");
         return Files.isWritable(passwd);
     }
 }
