@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -39,7 +39,7 @@ public class NewVSOld_th_TH {
                                                   UnsupportedEncodingException,
                                                   IOException {
         final String ENCODING = "UTF-8";
-        final Locale THAI_LOCALE = new Locale("th", "TH");
+        final Locale THAI_LOCALE = Locale.of("th", "TH");
 
         String rawFileName = "test_th_TH.txt";
         String oldFileName = "broken_th_TH.txt";
