@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,7 +41,7 @@ public class Bug4322313 extends IntlTest {
         boolean err = false;
         long mpm = 60 * 1000;   /* Milliseconds per a minute */
 
-        Locale[] locs = {Locale.US, Locale.JAPAN, Locale.UK, new Locale("ar")};
+        Locale[] locs = {Locale.US, Locale.JAPAN, Locale.UK, Locale.of("ar")};
 
         String[] formats = {
             "z",
