@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,7 +33,7 @@ import java.text.*;
 import java.util.*;
 
 public class ContextMonthNamesTest {
-    static Locale CZECH = new Locale("cs");
+    static Locale CZECH = Locale.of("cs");
     static Date JAN30 = new GregorianCalendar(2012, Calendar.JANUARY, 30).getTime();
 
     static String[] PATTERNS = {
