@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@ import java.util.spi.LocaleNameProvider;
  * values for Unicode Locale Extension key/type names.
  */
 public class LocaleNameProviderImpl extends LocaleNameProvider {
-    private static final Locale[] avail = {new Locale("foo")};
+    private static final Locale[] avail = {Locale.of("foo")};
 
     @Override
     public Locale[] getAvailableLocales() {
