@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -65,7 +65,7 @@ public class MessageFormatting {
         if (str.indexOf('{') < 0) {
             return str;
         }
-        Locale loc = new Locale("en", "US");
+        Locale loc = Locale.of("en", "US");
         MessageFormat format = new MessageFormat(str, loc);
         return format.format(args);
     }
