@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -64,7 +64,7 @@ public class Bug4518811 {
 
     static int getDays(String lang, String loc){
         int errors=0;
-        Locale newlocale = new Locale(lang, loc);
+        Locale newlocale = Locale.of(lang, loc);
 
         Calendar newCal = Calendar.getInstance(newlocale);
 
